--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ categories = ["development-tools", "development-tools::testing"]
 
 [dependencies]
 clap = { version = "4.5.28", features = ["derive"] }
+serde = { version = "1.0.217", features = ["derive"] }
