--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,33 +1,51 @@
-# FROM mcr.microsoft.com/devcontainers/java:1-21-bullseye
-FROM ubuntu:22.04
+FROM mcr.microsoft.com/devcontainers/base:ubuntu-22.04
 
-# Add any tools that are needed beyond Java
-RUN apt-get update && \
-    apt-get install -y sudo sed vim git make gcc zlib1g-dev zip unzip tree curl wget jq && \
-    apt-get autoremove -y && \
-    apt-get clean -y
-
-# Create a user for development
+# Arguments for user creation
 ARG USERNAME=vscode
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
-# Create the user with passwordless sudo privileges
+# Install necessary packages
+# Combine RUN commands and clean up in the same layer to reduce image size
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends \
+        sudo \
+        sed \
+        vim \
+        git \
+        make \
+        gcc \
+        zlib1g-dev \
+        zip \
+        unzip \
+        tree \
+        curl \
+        wget \
+        jq \
+        build-essential \
+    && apt-get autoremove -y \
+    && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create the user with sudo privileges
 RUN groupadd --gid $USER_GID $USERNAME \
     && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME -s /bin/bash \
-    && usermod -aG sudo $USERNAME \
     && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
-    && chmod 0440 /etc/sudoers.d/$USERNAME \
-    && chown -R $USERNAME:$USERNAME /home/$USERNAME
+    && chmod 0440 /etc/sudoers.d/$USERNAME
 
-WORKDIR /codeanalyzer-rs
-
+# Set up Rust for the vscode user
 USER $USERNAME
+WORKDIR /workspaces/codeanalyzer-rs
 
-# Install Java and Gradle via SDKMan
-RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
+# Install Rust using rustup
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \
+    && . $HOME/.cargo/env \
+    && rustup install nightly \
+    && rustup default nightly \
+    && rustup component add rustfmt clippy
 
-# This SHELL command is needed to run using `source`
-SHELL ["/bin/bash", "-c"]    
-RUN rustup install nightly && \
-    rustup default nightly
+# Update PATH for Rust
+ENV PATH="/home/${USERNAME}/.cargo/bin:${PATH}"
+
+# Pre-build common Rust tools to speed up container startup
+RUN cargo install cargo-watch cargo-edit
