Downgrade to rust version '2021'.
Signed-off-by: Rahul Krishna <i.m.ralk@gmail.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,13 +5,16 @@
     "remoteUser": "vscode",
     "workspaceFolder": "/codeanalyzer-rs",
     "workspaceMount": "source=${localWorkspaceFolder},target=/codeanalyzer-rs,type=bind,consistency=delegated",
-    "runArgs": ["-h", "codenet"],
+    "runArgs": [
+        "-h",
+        "codenet"
+    ],
     "customizations": {
         "vscode": {
             "settings": {
                 "markdown-preview-github-styles.colorTheme": "light",
                 "cSpell.words": [
-                    "northstar",
+                    "cldk",
                     "cyclomatic",
                     "stdlibs"
                 ],
